refactor(terms): 文章修正 #81

--- a/src/app/intl/terms/terms.component.html
+++ b/src/app/intl/terms/terms.component.html
@@ -6,7 +6,7 @@
         href="https://twitter.com/mikatahiro"
         target="_blank"
         >ちゃま</a
-      >（以下「当社」といいます）が「PAYpick」（以下「本サイト」といいます）にて提供するサービス（以下「本サービス」といいます）をご利用いただくための規約であり、当社が提供する本サービスに適用されます。
+      >（以下「当運営者」といいます）が「PAYpick」（以下「本サイト」といいます）にて提供するサービス（以下「本サービス」といいます）をご利用いただくための規約であり、当運営者が提供する本サービスに適用されます。
     </p>
     <h3 class="terms__title">第1条（サービスのご利用に際して）</h3>
     <p class="terms__content">
@@ -27,60 +27,60 @@
       2.前項第2号の本サービスは、利用者からの依頼に基づいて行われるものとし、利用者が本サービスの利用に必要な操作および情報送信を行った場合には、当該依頼を行ったものとします。なお、当該サービスにおいて入力いただく情報は、必ずご自身の情報をご入力していただくものとします。
     </p>
     <p class="terms__content">
-      3.利用者が利用可能な本サービスは、当社がその時点で提供しているものとします。
+      3.利用者が利用可能な本サービスは、当運営者がその時点で提供しているものとします。
     </p>
 
     <h3 class="terms__title">第3条（個人情報の取扱い）</h3>
     <p class="terms__content">
-      1.利用者は、本サービスの利用に際して利用者ご本人に関する情報を当社に対して提供する場合、真実、正確かつ完全な情報を提供しなければなりません。
+      1.利用者は、本サービスの利用に際して利用者ご本人に関する情報を当運営者に対して提供する場合、真実、正確かつ完全な情報を提供しなければなりません。
     </p>
     <p class="terms__content">
-      2.利用者は、本サービスの利用に際して登録するパスワードを不正に利用されないよう自らの責任で厳重に管理しなければなりません。当社は、登録されたパスワードを利用して行なわれた一切の行為を、利用者ご本人の行為とみなすことができます。
+      2.利用者は、本サービスの利用に際して登録するパスワードを不正に利用されないよう自らの責任で厳重に管理しなければなりません。当運営者は、登録されたパスワードを利用して行なわれた一切の行為を、利用者ご本人の行為とみなすことができます。
     </p>
 
     <h3 class="terms__title">第4条（ご利用のための設備）</h3>
     <p class="terms__content">
-      利用者が本サービスをご利用になるためには、Webにアクセスしていただく必要があります。利用者には自らの責任と費用で必要な機器、ソフトウェアを適切に準備、操作していただく必要があり、当社は、利用者がWebにアクセスされるための準備、操作方法などについては一切関与いたしません。また、閲覧に必要なアプリケーションなどを利用する際には、そのソフトウェアの配布元の規定が適用されます。
+      利用者が本サービスをご利用になるためには、Webにアクセスしていただく必要があります。利用者には自らの責任と費用で必要な機器、ソフトウェアを適切に準備、操作していただく必要があり、当運営者は、利用者がWebにアクセスされるための準備、操作方法などについては一切関与いたしません。また、閲覧に必要なアプリケーションなどを利用する際には、そのソフトウェアの配布元の規定が適用されます。
     </p>
 
     <h3 class="terms__title">第5条（ご利用の目的について）</h3>
     <p class="terms__content">
-      本サービスは、利用者の私的かつ非営利目的でのご利用に限定して提供しています。当社が事前に承諾した場合を除き、本サービスのご利用や本サービスへのアクセスについて、その全部または一部を問わず、営業活動その他の営利を目的としたご利用又はそれに準ずる行為、そのための準備行為としてのご利用は固くお断りいたします。また、その他、宗教活動、政治活動又はそれに類する目的での利用も行ってはならないものとします。
+      本サービスは、利用者の私的かつ非営利目的でのご利用に限定して提供しています。当運営者が事前に承諾した場合を除き、本サービスのご利用や本サービスへのアクセスについて、その全部または一部を問わず、営業活動その他の営利を目的としたご利用又はそれに準ずる行為、そのための準備行為としてのご利用は固くお断りいたします。また、その他、宗教活動、政治活動又はそれに類する目的での利用も行ってはならないものとします。
     </p>
 
     <h3 class="terms__title">第6条（著作権、財産権その他の権利）</h3>
     <p class="terms__content">
-      1.本サービスに含まれているコンテンツ及び個々の情報、商標、画像、動画、広告、デザイン等（以下「コンテンツ等」といいます）に関する著作権、商標権その他の財産権は当社もしくは当該コンテンツ等を創作した著作者又は著作権者に帰属しています。
+      1.本サービスに含まれているコンテンツ及び個々の情報、商標、画像、動画、広告、デザイン等（以下「コンテンツ等」といいます）に関する著作権、商標権その他の財産権は当運営者もしくは当該コンテンツ等を創作した著作者又は著作権者に帰属しています。
     </p>
     <p class="terms__content">
       2.本サービスに関連して使用されている全てのソフトウェアは、知的財産権に関する法令等により保護されている財産権を含んでいます。
     </p>
     <p class="terms__content">
-      3.利用者は、当社及び著作権その他の財産権を有する第三者から利用・使用を許諾されている場合、及び、法令により権利者からの許諾なく利用又は使用が許容されている場合を除き、本サービスの内容を複製、編集、改変、掲載、転載、公衆送信、配布、販売、提供、翻訳その他あらゆる利用又は使用を行ってはなりません。
+      3.利用者は、当運営者及び著作権その他の財産権を有する第三者から利用・使用を許諾されている場合、及び、法令により権利者からの許諾なく利用又は使用が許容されている場合を除き、本サービスの内容を複製、編集、改変、掲載、転載、公衆送信、配布、販売、提供、翻訳その他あらゆる利用又は使用を行ってはなりません。
     </p>
     <p class="terms__content">
-      4.利用者が前項に反する行為によって被った損害については、当社は一切の責任を負いかねます。また、利用者がこれらの行為によって利益を得た場合、当社はその利益相当額を請求できる権利を有するものとします。
+      4.利用者が前項に反する行為によって被った損害については、当運営者は一切の責任を負いかねます。また、利用者がこれらの行為によって利益を得た場合、当運営者はその利益相当額を請求できる権利を有するものとします。
     </p>
 
     <h3 class="terms__title">第7条（サービス内容の変更・終了等）</h3>
     <p class="terms__content">
-      1.当社は、本サービス（本サービスにおいて提供する情報の内容を含みます）の全部又は一部を利用者へ事前に通知することなく、変更、中断、又は終了することがあります。それにより利用者や第三者が損害を被った場合でも、当社は一切の責任を負いかねます。
+      1.当運営者は、本サービス（本サービスにおいて提供する情報の内容を含みます）の全部又は一部を利用者へ事前に通知することなく、変更、中断、又は終了することがあります。それにより利用者や第三者が損害を被った場合でも、当運営者は一切の責任を負いかねます。
     </p>
     <p class="terms__content">
-      2.当社は、下記のいずれかの事由があるとき、利用者へ事前に通知することなく本サービスの全部又は一部の提供を中断及び停止することがあります。それにより利用者や第三者が損害を被った場合でも、当社は一切の責任を負いかねます。
+      2.当運営者は、下記のいずれかの事由があるとき、利用者へ事前に通知することなく本サービスの全部又は一部の提供を中断及び停止することがあります。それにより利用者や第三者が損害を被った場合でも、当運営者は一切の責任を負いかねます。
     </p>
     <p class="terms__content">
-      当社又は当社指定の第三者による本サイトに関する設備の保守その他工事を行う場合
+      当運営者又は当運営者指定の第三者による本サイトに関する設備の保守その他工事を行う場合
     </p>
     <p class="terms__content">
-      当社又は当社指定の第三者による本サイトに関する設備の障害又は故障の場合
+      当運営者又は当運営者指定の第三者による本サイトに関する設備の障害又は故障の場合
     </p>
     <p class="terms__content">
       地震、洪水、津波等の自然災害、戦争、動乱、暴動、停電その他の非常事態が発生した場合
     </p>
     <p class="terms__content">司法、行政機関等しかるべき機関の要請による場合</p>
     <p class="terms__content">
-      その他運用上、技術上の理由により当社が必要と判断した場合
+      その他運用上、技術上の理由により当運営者が必要と判断した場合
     </p>
 
     <h3 class="terms__title">第8条（サービスご利用の制限）</h3>
@@ -90,7 +90,7 @@
 
     <h3 class="terms__title">第9条（利用者へのご連絡手段）</h3>
     <p class="terms__content">
-      当社からのご連絡、通知は、当社所定のサイトへの掲載又はメールを送信することをもって行うことします。但し、当社が必要と判断した場合は、郵便や電話など他の手段も使用する場合があります。
+      当運営者からのご連絡、通知は、当運営者所定のサイトへの掲載又はメールを送信することをもって行うことします。但し、当運営者が必要と判断した場合は、郵便や電話など他の手段も使用する場合があります。
     </p>
 
     <h3 class="terms__title">第10条（免責事項）</h3>
@@ -99,35 +99,35 @@
     </p>
     <p class="terms__content">
       1.第2条1項 （Ⅱ）に基づく
-      利用者からの問い合わせに対する回答・通知は、当社が受信した利用者の電子メールアドレス又は電話番号のいずれかに宛てに発信することにより足りるものとします。当社からの回答・通知は、システム障害等その他の原因により遅延する場合があります。
+      利用者からの問い合わせに対する回答・通知は、当運営者が受信した利用者の電子メールアドレス又は電話番号のいずれかに宛てに発信することにより足りるものとします。当運営者からの回答・通知は、システム障害等その他の原因により遅延する場合があります。
     </p>
     <p class="terms__content">
-      2.当社は、システム障害、誤作動又は通信回線の障害等の事由に起因して生じた結果につき、責任を負わないものとします。
+      2.当運営者は、システム障害、誤作動又は通信回線の障害等の事由に起因して生じた結果につき、責任を負わないものとします。
     </p>
     <p class="terms__content">
-      3.当社は、本サービスでは、SSL（Secure Sockets
-      Layer）と呼ばれる暗号化通信プロトコル等を使用して利用者の情報の安全に努めていますが、利用者が当社に送信する情報が万一インターネット途上で傍受され、又は漏洩した場合であっても、当社は責任を負わないものとします。
+      3.当運営者は、本サービスでは、SSL（Secure Sockets
+      Layer）と呼ばれる暗号化通信プロトコル等を使用して利用者の情報の安全に努めていますが、利用者が当運営者に送信する情報が万一インターネット途上で傍受され、又は漏洩した場合であっても、当運営者は責任を負わないものとします。
     </p>
     <p class="terms__content">
-      4.本サービス中に掲載される広告（その形態は問いません）や本サービス中にリンクされた外部サイトについて、当社は、その内容の正確性、速報性、完全性、商品性、又は合目的性等について、いかなる保証（明示的、黙示的を問いません）もいたしません。また、利用者や第三者に損害や不利益が発生した場合でも、当社は一切の責任を負いかねます。利用者は、広告内容及びリンクされた外部サイトに関してもご自身の判断と責任でご利用ください。
+      4.本サービス中に掲載される広告（その形態は問いません）や本サービス中にリンクされた外部サイトについて、当運営者は、その内容の正確性、速報性、完全性、商品性、又は合目的性等について、いかなる保証（明示的、黙示的を問いません）もいたしません。また、利用者や第三者に損害や不利益が発生した場合でも、当運営者は一切の責任を負いかねます。利用者は、広告内容及びリンクされた外部サイトに関してもご自身の判断と責任でご利用ください。
     </p>
 
     <h3 class="terms__title">第11条（情報の利用）</h3>
     <p class="terms__content">
-      当社は、本サービスを通じて得た情報、本サービスを利用された利用者より提供又は入力された情報（これらの情報には、事業者・サービスの評価等に関する情報、サービスの供給・事業者に関する情報を含み、個人又は法人を特定する情報を除きます）を、情報の分析・評価、第三者への情報提供等のために利用することができるものとします。
+      当運営者は、本サービスを通じて得た情報、本サービスを利用された利用者より提供又は入力された情報（これらの情報には、事業者・サービスの評価等に関する情報、サービスの供給・事業者に関する情報を含み、個人又は法人を特定する情報を除きます）を、情報の分析・評価、第三者への情報提供等のために利用することができるものとします。
     </p>
 
     <h3 class="terms__title">第12条（他サイトへのリンク）</h3>
     <p class="terms__content">
-      本サービス中に、他のWebサイトやリソースへのリンクを設置したり、また第三者が他のWebサイトやリソースへのリンクやトラックバックを登録する場合があります。リンク先のWebサイトやリソースはそれぞれの運営者が独立して管理しており、当社ではその内容や安全性などについては関知しておらず、一切の責任を負いかねます。
+      本サービス中に、他のWebサイトやリソースへのリンクを設置したり、また第三者が他のWebサイトやリソースへのリンクやトラックバックを登録する場合があります。リンク先のWebサイトやリソースはそれぞれの運営者が独立して管理しており、当運営者ではその内容や安全性などについては関知しておらず、一切の責任を負いかねます。
     </p>
 
     <h3 class="terms__title">第13条（禁止行為）</h3>
     <p class="terms__content">
-      1.当社は下記の行為を禁止事項と定め、利用者はこれを行わないこととします。
+      1.当運営者は下記の行為を禁止事項と定め、利用者はこれを行わないこととします。
     </p>
     <p class="terms__content">
-      全部又は一部を問わず、本サービスによって提供される情報を、当社の事前の同意なく、複写、再生、複製、送付、譲渡、頒布、配布、転売、送信、送信可能化、改変、翻案、翻訳、貸与、又はこれらの目的で利用又は使用するために保管する行為
+      全部又は一部を問わず、本サービスによって提供される情報を、当運営者の事前の同意なく、複写、再生、複製、送付、譲渡、頒布、配布、転売、送信、送信可能化、改変、翻案、翻訳、貸与、又はこれらの目的で利用又は使用するために保管する行為
     </p>
     <p class="terms__content">
       本規約又は各サービスの利用規約・ガイドライン等に違反する全ての行為
@@ -141,28 +141,28 @@
       本サービスの運営を妨げる行為、又はそのおそれのある行為
     </p>
     <p class="terms__content">
-      当社もしくは本サービスの信用を毀損する行為、又はそのおそれのある行為
+      当運営者もしくは本サービスの信用を毀損する行為、又はそのおそれのある行為
     </p>
     <p class="terms__content">
-      当社もしくは第三者の知的所有権（著作権、意匠権、実用新案権、商標権、特許権、ノウハウが含まれるがこれに限定されない）、名誉、プライバシーその他第三者の権利もしくは利益を侵害する行為、又はそのおそれのある行為
+      当運営者もしくは第三者の知的所有権（著作権、意匠権、実用新案権、商標権、特許権、ノウハウが含まれるがこれに限定されない）、名誉、プライバシーその他第三者の権利もしくは利益を侵害する行為、又はそのおそれのある行為
     </p>
     <p class="terms__content">
       利用者以外の者になりますまして本サービスを利用すること
     </p>
     <p class="terms__content">虚偽の情報を送信すること</p>
     <p class="terms__content">上記各号に定める行為を助長する行為</p>
-    <p class="terms__content">その他、当社が不適当と判断すること</p>
+    <p class="terms__content">その他、当運営者が不適当と判断すること</p>
     <p class="terms__content">
-      2.当社は、上記各号に該当する行為がなされた場合、当該利用者に対して本サービスの利用の停止その他当社が適切と判断する処置をとらせていただきます。利用者が本規約の内容もしくは趣旨に違反し、又は本規約の精神に照らして不適切な行為を行ったと当社が判断した場合などにも、当該措置をとる場合があります。利用者による不適切な行為その他利用者の帰責性の有無にかかわらず、当社の裁量で当該処置を行うことがあります。当社がかかる措置を行った理由については、その理由の如何を問わず利用者に対して一切お答えできませんことを予めご承知ください。
-      当社が行った上記措置に起因して利用者に損害が生じても、当社は一切の責任を負いかねます。
+      2.当運営者は、上記各号に該当する行為がなされた場合、当該利用者に対して本サービスの利用の停止その他当運営者が適切と判断する処置をとらせていただきます。利用者が本規約の内容もしくは趣旨に違反し、又は本規約の精神に照らして不適切な行為を行ったと当運営者が判断した場合などにも、当該措置をとる場合があります。利用者による不適切な行為その他利用者の帰責性の有無にかかわらず、当運営者の裁量で当該処置を行うことがあります。当運営者がかかる措置を行った理由については、その理由の如何を問わず利用者に対して一切お答えできませんことを予めご承知ください。
+      当運営者が行った上記措置に起因して利用者に損害が生じても、当運営者は一切の責任を負いかねます。
     </p>
 
     <h3 class="terms__title">第14条（本規約の変更）</h3>
     <p class="terms__content">
-      1.当社は、本規約を変更できるものとし、当社が任意に定めた効力発生日から変更後の本規約の効力が発生するものとします。
+      1.当運営者は、本規約を変更できるものとし、当運営者が任意に定めた効力発生日から変更後の本規約の効力が発生するものとします。
     </p>
     <p class="terms__content">
-      2.前項の場合、当社は、効力発生日の１ヶ月以上前の相当な時期までに、利用者に対して、本規約の変更の内容及び効力発生日を通知いたします。但し、当該変更による利用者の不利益の程度が軽微であると当社が判断した場合、その期間を短縮することができるものとします。
+      2.前項の場合、当運営者は、効力発生日の１ヶ月以上前の相当な時期までに、利用者に対して、本規約の変更の内容及び効力発生日を通知いたします。但し、当該変更による利用者の不利益の程度が軽微であると当運営者が判断した場合、その期間を短縮することができるものとします。
     </p>
     <p class="terms__content">
       3.前項の規定は、本規約の変更が利用者の一般の利益に適合する場合には適用しないものとします。
