refactor(not-found): 404修正 #81

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,7 +1,10 @@
-<div class="container">
-  <h1>404</h1>
-  <p>お探しのページは見つかりませんでした</p>
+<div class="not-found">
+  <img src="/assets/images/icons/404.svg" alt="404の画像" />
+  <div class="not-found__title">
+    <h1>お探しのページは</h1>
+    <h1>見つかりませんでした</h1>
+  </div>
   <button class="back-btn" routerLink="/" mat-raised-button color="primary">
-    Topへ戻る
+    トップへ戻る
   </button>
 </div>
