--- a/src/app/not-found/not-found.component.scss
+++ b/src/app/not-found/not-found.component.scss
@@ -1,11 +1,18 @@
-:host {
+.not-found {
   text-align: center;
+  padding: 0 16px;
+  &__title {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 32px;
+    h1 {
+      font-size: 24px;
+      margin: 0;
+    }
+  }
 }
 
-h1 {
-  margin: 40px 0;
-}
-
-.back-btn {
-  margin: 40px 0;
+img {
+  height: 360px;
 }
