refactor(title): componentのtitle修正 #81

--- a/src/app/compare/compare/compare.component.html
+++ b/src/app/compare/compare/compare.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="compare">
-    <div class="compare__title">
-      <h1>{{ type }}を</h1>
-      <h1>比較する</h1>
-    </div>
+    <h1 class="compare__title">
+      <span>{{ type }}を</span>
+      <span>比較する</span>
+    </h1>
     <div class="compare__wrapper">
       <div class="row__grid">
         <ng-container
