--- a/src/app/compare/compare/compare.component.scss
+++ b/src/app/compare/compare/compare.component.scss
@@ -3,12 +3,11 @@
 .compare {
   text-align: center;
   &__title {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 32px;
-    h1 {
-      margin: 0;
+    font-size: 24px;
+    margin: 0 0 32px;
+    border-bottom: 1px solid #ccc;
+    @include sp {
+      display: grid;
     }
   }
   &__wrapper {
