--- a/src/app/create/form/form.component.scss
+++ b/src/app/create/form/form.component.scss
@@ -6,14 +6,14 @@
 }
 
 .heading {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 32px;
-  h1 {
-    margin: 0;
+  text-align: center;
+  font-size: 24px;
+  margin: 40px 0 32px;
+  border-bottom: 1px solid #ccc;
+  @include sp {
+    display: grid;
+    margin: 16px 0 32px;
   }
-  border-bottom: 1px solid black;
 }
 
 .form-wrapper {
