--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,10 +1,10 @@
 <div class="not-found">
   <img src="/assets/images/icons/404.svg" alt="404の画像" />
-  <div class="not-found__title">
-    <h1>お探しのページは</h1>
-    <h1>見つかりませんでした</h1>
-  </div>
-  <button class="back-btn" routerLink="/" mat-raised-button color="primary">
+  <h1 class="not-found__title">
+    <span>お探しのページは</span>
+    <span>見つかりませんでした</span>
+  </h1>
+  <button routerLink="/" mat-raised-button color="primary">
     トップへ戻る
   </button>
 </div>
