--- a/src/app/not-found/not-found.component.scss
+++ b/src/app/not-found/not-found.component.scss
@@ -1,14 +1,13 @@
+@import '_mixins';
+
 .not-found {
   text-align: center;
   padding: 0 16px;
   &__title {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 32px;
-    h1 {
-      font-size: 24px;
-      margin: 0;
+    font-size: 24px;
+    margin: 0 0 32px;
+    @include sp {
+      display: grid;
     }
   }
 }
