--- a/src/app/create/shared-form-section/shared-form-section.component.scss
+++ b/src/app/create/shared-form-section/shared-form-section.component.scss
@@ -24,6 +24,9 @@
   border-color: rgb(204, 204, 204);
   font-size: 13px;
   margin-bottom: 24px;
+  input {
+    display: none;
+  }
   p {
     margin: 0;
   }
