--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -55,13 +55,12 @@
           </mat-form-field>
 
           <div class="code">
-            <mat-label class="code__label">オートチャージ *</mat-label>
-            <mat-radio-group formControlName="autoCharge">
+            <mat-label class="code__label">オートチャージ</mat-label>
+            <mat-radio-group formControlName="autoCharge" required>
               <mat-radio-button
                 *ngFor="let autoChargePattern of autoChargePatterns"
                 [value]="autoChargePattern"
                 class="code__radio-button"
-                required
                 >{{ autoChargePattern }}</mat-radio-button
               >
             </mat-radio-group>
@@ -82,25 +81,23 @@
 
         <ng-container *ngIf="type === 'code'">
           <div class="code">
-            <mat-label class="code__label">個人間送金 *</mat-label>
-            <mat-radio-group formControlName="pushMoney">
+            <mat-label class="code__label">個人間送金</mat-label>
+            <mat-radio-group formControlName="pushMoney" required>
               <mat-radio-button
                 *ngFor="let simplePattern of simplePatterns"
                 [value]="simplePattern"
                 class="code__radio-button"
-                required
                 >{{ simplePattern }}</mat-radio-button
               >
             </mat-radio-group>
           </div>
           <div class="code">
-            <mat-label class="code__label">出金 *</mat-label>
-            <mat-radio-group formControlName="pullMoney">
+            <mat-label class="code__label">出金</mat-label>
+            <mat-radio-group formControlName="pullMoney" required>
               <mat-radio-button
                 *ngFor="let simplePattern of simplePatterns"
                 [value]="simplePattern"
                 class="code__radio-button"
-                required
                 >{{ simplePattern }}</mat-radio-button
               >
             </mat-radio-group>
