--- a/src/app/create/shared-form-section/shared-form-section.component.html
+++ b/src/app/create/shared-form-section/shared-form-section.component.html
@@ -81,8 +81,12 @@
     >
   </mat-form-field>
 
-  <mat-form-field class="form-wrapper__chip-list">
-    <mat-label>使えるお店</mat-label>
+  <mat-form-field class="chip-list">
+    <mat-label
+      class="chip-list__label"
+      [class.active]="!form.pristine && chipsInvalid"
+      >使えるお店</mat-label
+    >
     <mat-chip-list #chipList aria-label="Store selection" required>
       <mat-chip
         *ngFor="let store of stores"
@@ -110,6 +114,9 @@
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
+  <mat-error class="chip-list__error" *ngIf="!form.pristine && chipsInvalid"
+    >必須入力です</mat-error
+  >
 
   <mat-form-field
     class="form-wrapper__content"
