fix(chips): error条件修正 #81

--- a/src/app/create/shared-form-section/shared-form-section.component.html
+++ b/src/app/create/shared-form-section/shared-form-section.component.html
@@ -114,7 +114,7 @@
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
-  <mat-error class="chip-list__error" *ngIf="!form.pristine && chipsInvalid"
+  <mat-error class="chip-list__error" *ngIf="chipsInvalid && chipsError"
     >必須入力です</mat-error
   >
 
