--- a/src/app/settings/settings/settings.component.scss
+++ b/src/app/settings/settings/settings.component.scss
@@ -84,7 +84,7 @@ mat-form-field {
     padding: 8px 24px;
     background-color: #eceff1;
     border-radius: 5px;
-    i {
+    span {
       margin-right: 8px;
     }
   }
