--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -1,55 +1,51 @@
-<mat-list dense>
-  <mat-nav-list>
-    <a mat-list-item routerLink="/code-card">
-      <div class="icon">
-        <img src="/assets/images/icons/code.png" alt="" />
-      </div>
-      <p>モバイル決済</p></a
-    >
-    <a mat-list-item routerLink="/electron-card">
-      <div class="icon">
-        <img src="/assets/images/icons/ic.png" alt="" />
-      </div>
-      <p>電子マネー</p>
-    </a>
-    <a mat-list-item routerLink="/credit-card">
-      <div class="icon">
-        <img src="/assets/images/icons/credit.png" alt="" />
-      </div>
-      <p>クレジットカード</p>
-    </a>
-    <a mat-list-item routerLink="/point-card">
-      <div class="icon">
-        <img src="/assets/images/icons/point2.png" alt="" />
-      </div>
-      <p>ポイントカード</p>
-    </a>
-    <mat-divider></mat-divider>
-
-    <a mat-list-item routerLink="">
-      <mat-icon>info</mat-icon>
-      <p>キャンペーン情報</p>
-    </a>
-    <mat-divider></mat-divider>
-    <a mat-list-item routerLink="/intl/help">
-      <mat-icon>help</mat-icon>
-      <p>このサイトの使い方</p>
-    </a>
-    <a mat-list-item routerLink="/intl/terms">
-      <mat-icon>assignment</mat-icon>
-      <p>利用規約</p>
-    </a>
-    <a mat-list-item routerLink="/intl/legal">
-      <mat-icon>assignment</mat-icon>
-      <p>特定商取引に関する表記</p>
-    </a>
-    <mat-divider></mat-divider>
-    <a mat-list-item href="https://twitter.com/mikatahiro" target="_blank">
-      <div class="icon">
-        <img src="/assets/images/icons/TWITTER.png" alt="" />
-      </div>
-      <p>制作者：ちゃま</p>
-      <mat-icon class="link">open_in_new</mat-icon>
-    </a>
-  </mat-nav-list>
-</mat-list>
+<mat-nav-list dense>
+  <a mat-list-item routerLink="/">
+    <mat-icon>home</mat-icon>
+    <p>ホーム</p>
+  </a>
+  <mat-divider></mat-divider>
+  <h2 mat-subheader>カテゴリ</h2>
+  <a mat-list-item routerLink="/code-card">
+    <div class="icon">
+      <img src="/assets/images/icons/code.png" alt="" />
+    </div>
+    <p>モバイル決済</p></a
+  >
+  <a mat-list-item routerLink="/electron-card">
+    <div class="icon">
+      <img src="/assets/images/icons/ic.png" alt="" />
+    </div>
+    <p>電子マネー</p>
+  </a>
+  <a mat-list-item routerLink="/credit-card">
+    <div class="icon">
+      <img src="/assets/images/icons/credit.png" alt="" />
+    </div>
+    <p>クレジットカード</p>
+  </a>
+  <a mat-list-item routerLink="/point-card">
+    <div class="icon">
+      <img src="/assets/images/icons/point2.png" alt="" />
+    </div>
+    <p>ポイントカード</p>
+  </a>
+  <mat-divider></mat-divider>
+  <a mat-list-item routerLink="/intl/help">
+    <mat-icon>help</mat-icon>
+    <p>PAYpickについて</p>
+  </a>
+  <a mat-list-item routerLink="/intl/terms">
+    <mat-icon>assignment</mat-icon>
+    <p>利用規約</p>
+  </a>
+  <a mat-list-item routerLink="/intl/legal">
+    <mat-icon>assignment</mat-icon>
+    <p>特定商取引に関する表記</p>
+  </a>
+  <mat-divider></mat-divider>
+  <a mat-list-item href="https://twitter.com/mikatahiro" target="_blank">
+    <mat-icon><span class="icon-twitter"></span></mat-icon>
+    <p>制作者：ちゃま</p>
+    <mat-icon class="link">open_in_new</mat-icon>
+  </a>
+</mat-nav-list>
