--- a/src/app/drawer/drawer.component.scss
+++ b/src/app/drawer/drawer.component.scss
@@ -19,3 +19,25 @@ mat-icon {
   width: 12px;
   height: 12px;
 }
+
+.footer {
+  padding: 16px;
+  font-size: 13px;
+  color: #606060;
+}
+
+.list {
+  margin: 0;
+  list-style-type: none;
+  padding-left: 0;
+  &__item {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+.copyright {
+  color: #909090;
+  padding: 32px 0 0;
+  margin: 0;
+}
