--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <ul class="list">
-    <li class="list__item"><a href="">利用規約</a></li>
+    <li class="list__item"><a routerLink="/intl/terms">利用規約</a></li>
     <li class="list__item">
-      <a href="">特定商取引法に基づく表示</a>
+      <a routerLink="/intl/legal">特定商取引に関する表記</a>
     </li>
-    <li class="list__item"><a href="">このサイトについて</a></li>
+    <li class="list__item"><a routerLink="/intl/help">PAYpickについて</a></li>
   </ul>
   <p class="myname">
     制作者：
