--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,58 +1,20 @@
 <div class="container">
-  <div class="grid">
-    <mat-card class="card">
-      <div
-        class="card__cover"
-        style="
-          background-image: url(https://dl.dropbox.com/s/pd4yoqgwo5eflwd/paypay.jpg);
-        "
-      ></div>
-      <p class="card__name">PayPay</p>
-    </mat-card>
-    <mat-card class="card">
-      <div
-        class="card__cover"
-        style="
-          background-image: url(https://dl.dropbox.com/s/xowc9apk4itkep6/linepay-logo-jp-gl.png);
-        "
-      ></div>
-      <p class="card__name">LINEPay</p>
-    </mat-card>
-    <mat-card class="card">
-      <div
-        class="card__cover"
-        style="
-          background-image: url(https://dl.dropbox.com/s/a9ujltn0uy8lypg/merpay_201911_postpay_01.png);
-        "
-      ></div>
-      <p class="card__name">merPay</p>
-    </mat-card>
-    <mat-card class="card">
-      <div
-        class="card__cover"
-        style="
-          background-image: url(https://dl.dropbox.com/s/6d30u9fm7i0dqvs/rakuten_pay_logo-973x584.jpg);
-        "
-      ></div>
-      <p class="card__name">楽天Pay</p>
-    </mat-card>
-    <mat-card class="card">
-      <div
-        class="card__cover"
-        style="
-          background-image: url(https://dl.dropbox.com/s/bd08m01xw5uhgee/aupay-min-768x402.png);
-        "
-      ></div>
-      <p class="card__name">auPAY</p>
-    </mat-card>
-    <mat-card class="card">
-      <div
-        class="card__cover"
-        style="
-          background-image: url(https://dl.dropbox.com/s/cpx6cenaifyav3h/alipay-1024x640.jpg);
-        "
-      ></div>
-      <p class="card__name">ALIPAY</p>
-    </mat-card>
+  <h2 class="section-heading">ジャンルから探す</h2>
+  <div class="genre-grid">
+    <ng-container *ngFor="let genreList of genreLists">
+      <a class="genre" [routerLink]="'/' + genreList.id + '-card'">
+        <mat-card>
+          <div
+            class="genre__cover"
+            [style]="
+              'background-image: url(assets/pay/' + genreList.id + '.png);'
+            "
+          ></div>
+          <mat-card-content>
+            <p class="genre__content">{{ genreList.name }}</p>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </ng-container>
   </div>
 </div>
