--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,16 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .container {
   margin: 0 auto;
   padding: 80px 24px 80px;
@@ -23,11 +33,6 @@ body {
   @include sp {
     padding: 120px 16px 80px;
   }
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
 }
 
 .link {
@@ -51,9 +56,6 @@ img {
 .card {
   &__trigger {
     display: block;
-    cursor: pointer;
-    text-decoration: none;
-    color: inherit;
   }
   &__cover {
     background: center/cover;
