--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -57,9 +57,28 @@
     margin: 0;
   }
   &__arrow {
+    font-size: 13px;
     text-align: center;
     border-top: 1px solid rgba(0, 0, 0, 0.12);
     padding: 8px;
+    position: relative;
+    padding-right: 20px;
+    &::after {
+      content: '';
+      width: 6px;
+      height: 6px;
+      border: 0px;
+      border-top: solid 2px #4db6ac;
+      border-right: solid 2px #4db6ac;
+      -ms-transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg);
+      position: absolute;
+      top: 50%;
+      right: 0;
+      margin-top: -4px;
+      margin-right: 8px;
+    }
     &:hover {
       background: rgba(0, 0, 0, 0.04);
       text-decoration: underline;
