--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import '~@angular/material/theming';
 
 .section {
   margin-bottom: 80px;
@@ -28,6 +29,16 @@
   }
 }
 
+mat-card {
+  @include mat-elevation(2);
+  @include mat-elevation-transition;
+  &:hover {
+    @include mat-elevation(8);
+    text-decoration: underline;
+    color: #4db6ac;
+  }
+}
+
 .genre {
   display: block;
   &__cover {
@@ -48,15 +59,18 @@
   margin: 0;
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  overflow: hidden;
   background: #fff;
   &__title {
     font-size: 14px;
     text-align: center;
+    border-top: 3px solid #4db6ac;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     padding: 8px;
     margin: 0;
   }
   &__arrow {
+    color: #4db6ac;
     font-size: 13px;
     text-align: center;
     border-top: 1px solid rgba(0, 0, 0, 0.12);
@@ -82,7 +96,6 @@
     &:hover {
       background: rgba(0, 0, 0, 0.04);
       text-decoration: underline;
-      color: #4db6ac;
     }
   }
 }
