--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -71,7 +71,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   &__item {
+    background-color: #00867d;
     margin-left: 16px;
   }
   &__icon {
