--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -3,7 +3,7 @@
     <h2 class="section__heading">ジャンルから探す</h2>
     <div class="section__grid">
       <ng-container *ngFor="let genreList of genreLists">
-        <a class="genre" [routerLink]="'/' + genreList.id + '-card'">
+        <a class="genre" [routerLink]="'card-list/' + genreList.id">
           <mat-card>
             <div
               class="genre__cover"
@@ -22,15 +22,19 @@
   <section class="section">
     <h2 class="section__heading">電子決済 人気ランキング</h2>
     <div class="section__list">
-      <ng-container *ngFor="let cards of cardsGroup; index as g">
+      <ng-container
+        *ngFor="let cards of cardsGroup; index as cardsGroupedIndex"
+      >
         <ul class="list">
           <h3 class="list__title">
-            <span>{{ genreLists[g].name }}ランキング</span>
+            <span>{{ genreLists[cardsGroupedIndex].name }}ランキング</span>
           </h3>
           <li *ngFor="let card of cards; index as i">
             <a
               class="list-item"
-              [routerLink]="genreLists[g].id + '-detail/' + card.cardId"
+              [routerLink]="
+                genreLists[cardsGroupedIndex].id + '-detail/' + card.cardId
+              "
             >
               <img
                 class="list-item__img"
@@ -50,7 +54,9 @@
             </a>
           </li>
           <div class="list__arrow">
-            <a href=""><span>ランキングをもっと見る</span></a>
+            <a [routerLink]="'card-list/' + genreLists[cardsGroupedIndex].id"
+              ><span>ランキングをもっと見る</span></a
+            >
           </div>
         </ul>
       </ng-container>
