--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,8 @@
   justify-content: space-between;
   padding: 8px 16px;
   align-items: center;
-  border-bottom: 1px solid rgba(black, 0.38);
+  border-bottom: 1px solid #e0e0e0;
+  box-shadow: 0 0 4px #ddd;
   height: auto;
   position: fixed;
   z-index: 777;
